<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.joaquim.s3watch.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_device_connection"
        android:name="org.joaquim.s3watch.ui.device.DeviceConnectionFragment" 
        android:label="@string/title_device_connection"
        tools:layout="@layout/fragment_device_connection">
        <action
            android:id="@+id/action_deviceConnection_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@+id/navigation_device_connection"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notification_settings"
        android:name="org.joaquim.s3watch.ui.notifications.NotificationSettingsFragment"
        android:label="@string/title_notification_settings"
        tools:layout="@layout/fragment_notification_settings" />
</navigation>
